--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <span class="icon-[line-md--search-filled] text-black text-4xl"></span>
 
 </body>
 </html>
