finished the hot products design in homepage

--- a/public/index.html
+++ b/public/index.html
@@ -43,15 +43,17 @@
         <!--  -->
 
         <!-- hot products -->
-        <section class="flex flex-col justify-center m-auto items-center border mt-44 w-[80%]">
+        <section class="flex flex-col justify-center m-auto items-center border mt-44">
             <h2 class="productHeading">HOT PRODUCTS</h2>
 
-            <div class="flex justify-around items-center w-screen my-10">
+            <!-- container -->
+            <div class="flex justify-around items-center w-full my-10">
 
-                <div class="w-60 h-fit flex flex-col bg-gray-100 hover:bg-slate-200 hover:scale-105 transition-all cursor-pointer">
-                    <img class="w-fit" src="assets/images/Products/Beds/bed 3/1.png" alt="">
-                    <p class="flex justify-center text-xl font-normal tracking-wide">Lorem ipsum</p>
-                    <div class="flex justify-between">
+                <!-- card -->
+                <div class="w-fit h-fit flex flex-col drop-shadow-sm border scale-75 bg-whittt hover:bg-gray-100 hover:scale-[0.8] transition-all cursor-pointer">
+                    <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
+                    <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
+                    <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
@@ -60,14 +62,15 @@
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <p class="text-slate-400 pl-2">(reviews)</p>
                         </div>
-                        <p class="text-lBrown pr-2 text-xl">$99</p>
+                        <p class="text-lBrown pr-2 text-2xl">$99</p>
                     </div>
                 </div>
 
-                <div class="w-60 h-fit flex flex-col bg-gray-100 hover:bg-slate-200 hover:scale-105 transition-all cursor-pointer">
-                    <img src="assets/images/Products/Beds/bed 3/1.png" alt="">
-                    <p class="flex justify-center text-xl font-normal tracking-wide">Lorem ipsum</p>
-                    <div class="flex justify-between">
+                <!-- card -->
+                <div class="w-fit h-fit flex flex-col drop-shadow-sm border scale-75 bg-whittt hover:bg-gray-100 hover:scale-[0.8] transition-all cursor-pointer">
+                    <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
+                    <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
+                    <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
@@ -76,14 +79,15 @@
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <p class="text-slate-400 pl-2">(reviews)</p>
                         </div>
-                        <p class="text-lBrown pr-2 text-xl">$99</p>
+                        <p class="text-lBrown pr-2 text-2xl">$99</p>
                     </div>
                 </div>
 
-                <div class="w-60 h-fit flex flex-col bg-gray-100 hover:bg-slate-200 hover:scale-105 transition-all cursor-pointer">
-                    <img src="assets/images/Products/Beds/bed 3/1.png" alt="">
-                    <p class="flex justify-center text-xl font-normal tracking-wide">Lorem ipsum</p>
-                    <div class="flex justify-between">
+                <!-- card -->
+                <div class="w-fit h-fit flex flex-col drop-shadow-sm border scale-75 bg-whittt hover:bg-gray-100 hover:scale-[0.8] transition-all cursor-pointer">
+                    <img class="w-full self-center" src="assets/images/Products/Beds/bed 3/1.png" alt="">
+                    <p class="flex justify-center text-2xl font-normal tracking-widest">Lorem ipsum</p>
+                    <div class="flex justify-between w-full">
                         <div class="flex justify-start items-center">
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
@@ -92,9 +96,10 @@
                             <span class="icon-[material-symbols--star] text-orange-500 text-xl"></span>
                             <p class="text-slate-400 pl-2">(reviews)</p>
                         </div>
-                        <p class="text-lBrown pr-2 text-xl">$99</p>
+                        <p class="text-lBrown pr-2 text-2xl">$99</p>
                     </div>
                 </div>
+                
             </div>
         </section>
 
