creation de la grande grid qui a le main de page

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/dist/output.css">
     <title>Document</title>
+    <!-- <style>
+        *{
+            border: solid 1px red;
+        }
+    </style> -->
 </head>
-<body>
-    <span class="icon-[line-md--search-filled] text-black text-4xl"></span>
+<body class=" h-svh  ">
+    <nav class="h-[10%]">
+<p>he</p>
+    </nav>
+<main>
+<div class="h-[500px] w-[1380px] grid grid-cols-2 gap-1 ">
+    <div>
+        <div class=" h-[90%] rounded-e-full border-dBrown border-4 shadow-md shadow-dark  flex justify-center items-center">
+            <img src="/public/assets/images/FAQs/FAQs.jpg" class="w-full h-[100%] rounded-e-full opacity-10  relative " alt="">
+             <div class="flex flex-col text-center gap-3 absolute">
+<h1 class="text-9xl font-Mont text-lBrown font-semibold">FAQS</h1>
+<div class="flex flex-col gap-2">
+<span class="font-Mont font-extrabold text-3xl text-gray">FREQUENTLY ASKED QUESTIONS.</span>
+<span class="font-Mont  text-3xl text-gray "> Here are some common questions about </span>
+<span class="font-Mont font-extrabold text-3xl text-gray">SOFALO</span>
+</div>
+             </div>
+            
+        </div>
+    </div>
+    <div class="bg-red-500"></div>
 
+</div>
+
+</main>
+
+   
 </body>
 </html>
