alors j ai cree la deuxiemme section de page qui il ya l animation et modfier les styles

--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/dist/output.css">
     <title>Document</title>
     <!-- <style>
-        *{
+        * {
             border: solid 1px red;
         }
     </style> -->
 </head>
+
 <body class=" h-svh  ">
     <nav class="h-[10%]">
-<p>he</p>
+        <p>he</p>
     </nav>
-<main>
-<div class="h-[500px] w-[1380px] grid grid-cols-2 gap-1 ">
-    <div>
-        <div class=" h-[90%] rounded-e-full border-dBrown border-4 shadow-md shadow-dark  flex justify-center items-center">
-            <img src="/public/assets/images/FAQs/FAQs.jpg" class="w-full h-[100%] rounded-e-full opacity-10  relative " alt="">
-             <div class="flex flex-col text-center gap-3 absolute">
-<h1 class="text-9xl font-Mont text-lBrown font-semibold">FAQS</h1>
-<div class="flex flex-col gap-2">
-<span class="font-Mont font-extrabold text-3xl text-gray">FREQUENTLY ASKED QUESTIONS.</span>
-<span class="font-Mont  text-3xl text-gray "> Here are some common questions about </span>
-<span class="font-Mont font-extrabold text-3xl text-gray">SOFALO</span>
-</div>
-             </div>
-            
+    <main>
+        <div class="h-[500px] w-[1380px] grid grid-cols-2 gap-7 ">
+            <div>
+                <div
+                    class=" h-[90%] rounded-e-full border-dBrown border-4 shadow-md shadow-dark  flex justify-center items-center">
+                    <img src="/public/assets/images/FAQs/FAQs.jpg"
+                        class="w-full h-[100%] rounded-e-full opacity-10  relative " alt="">
+                    <div class="flex flex-col text-center gap-3 absolute">
+                        <h1 class="text-9xl font-Mont text-lBrown font-semibold  ">FAQS</h1>
+                        <div class="flex flex-col gap-2">
+                            <span class="font-Mont font-extrabold text-3xl text-gray">FREQUENTLY ASKED QUESTIONS.</span>
+                            <span class="font-Mont  text-3xl text-gray "> Here are some common questions about </span>
+                            <span class="font-Mont font-extrabold text-3xl text-gray">SOFALO</span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class=" flex justify-between items-center ">
+                <div class="w-[2%] h-[90%] bg-lBrown rounded-full "></div>
+                <div class="w-[90%] h-[95%]  grid grid-cols-2 gap-4 ">
+                    <div
+                        class="flex justify-center items-center flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
+                        <div
+                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  ">
+                            <img src="/public/assets/images/FAQs/support.png" class="w-36 h-36" alt="">
+                        </div>
+                        <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
+                    </div>
+                    <div
+                        class="flex justify-center items-center flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
+                        <div
+                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  ">
+                            <img src="/public/assets/images/FAQs/return-box.png" class="w-36 h-36" alt="">
+                        </div>
+                        <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">REFUND POLICY</p>
+                    </div>
+                    <div
+                        class="flex justify-center items-center flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
+                        <div
+                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  ">
+                            <img src="/public/assets/images/FAQs/trust.png" class="w-36 h-36" alt="">
+                        </div>
+                        <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">Trust</p>
+                    </div>
+                    <div
+                        class="flex justify-center items-center flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
+                        <div
+                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  ">
+                            <img src="/public/assets/images/FAQs/payement.png" class="w-36 h-36" alt="">
+                        </div>
+                        <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">PAYMENT</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
-    </div>
-    <div class="bg-red-500"></div>
 
-</div>
+    </main>
 
-</main>
 
-   
 </body>
+
 </html>
