--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -7,6 +7,7 @@
     <title>Products Page</title>
 </head>
 <body>
+
     <div class="pt-20 px-4">
         <!-- Search Sort & Filter Bar -->
         <div class="flex flex-col md:flex-row justify-around items-center gap-4 md:gap-0">
@@ -25,6 +26,30 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- Product cards Container -->
+    <div class="container max-w-full mx-auto justify-between grid grid-cols-1 gap-20 sm:grid-cols-2 md:grid-cols-3 mt-8 px-4 md:px-0">
+        <!-- Card 1 -->
+        <div class="flex flex-col bg-white rounded-lg p-4 hover:shadow-lg transition-shadow duration-300 max-w-xs mx-auto">
+            <img src="assets/images/Products/Beds/bed 1/1.png" class="bg-whiteGrey p-2" alt="Product Image">
+            <div class="flex flex-col mt-4">
+                <div class="reviews flex gap-1 items-center">
+                    <div class="flex">
+                        <span class="icon-[ri--star-fill] text-lBrown w-3"></span>
+                        <span class="icon-[ri--star-fill] text-lBrown w-3"></span>
+                        <span class="icon-[ri--star-fill] text-lBrown w-3"></span>
+                        <span class="icon-[ri--star-fill] text-lBrown w-3"></span>
+                        <span class="icon-[ri--star-fill] text-lBrown w-3"></span>
+                    </div>
+                    <p class="text-SoftGray text-sm">(Reviews)</p>
+                    <p class="text-lBrown text-sm ml-auto">$250</p>
+                </div>
+                <p class="text-lg font-semibold mt-2">Lorem Ipsum</p>
+                <button class="bg-lBrown text-white py-1 rounded mt-2 border-2 border-transparent hover:bg-white hover:border-lBrown hover:text-lBrown transition-all duration-300">SEE DETAILS</button>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
