--- a/public/contact.html
+++ b/public/contact.html
@@ -13,7 +13,7 @@
     <!-- Contact Section -->
     <section class="flex flex-col items-center px-4 py-8">
         <h2 class="text-4xl font-bold mb-2">CONTACT</h2>
-        <p class="text-lg text-orange-500 tracking-widest mb-6">HAVE A QUESTION ?</p>
+        <p class="text-lg text-lBrown tracking-widest mb-6">HAVE A QUESTION ?</p>
 
         <form class="w-full max-w-lg flex flex-col items-center">
             <div class="flex space-x-4 w-full mb-4">
@@ -23,6 +23,15 @@
             <textarea placeholder="Your question here..." class="w-full p-3 h-32 border border-gray-300 rounded-md resize-none focus:outline-none focus:ring focus:ring-orange-300 mb-6"></textarea>
             <button type="submit" class="w-full py-3 bg-orange-500 text-white font-semibold rounded-md hover:bg-orange-600 transition">SEND</button>
         </form>
+    </section>
+    
+    <!-- Visit Us Section -->
+    <section class="flex flex-col items-center px-4 py-8">
+        <h3 class="text-3xl font-bold mb-6">VISIT US</h3>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 w-full max-w-4xl">
+            <img src="./assets/images/contactimg/googlemap.png" alt="Map" class="w-full h-auto rounded-md">
+            <img src="./assets/images/contactimg/googlemap.png" alt="Map" class="w-full h-auto rounded-md">
+        </div>
     </section>
 </body>
 </html>
