--- a/public/about.html
+++ b/public/about.html
@@ -8,23 +8,8 @@
     <title>Document</title>
 </head>
 
-    <body class="bg-white font-sans">
+    <body >
 
     
-        <!-- Contact Section -->
-        <section class="flex flex-col items-center px-4 py-8">
-            <h2 class="text-4xl font-bold mb-2">CONTACT</h2>
-            <p class="text-lg text-orange-500 tracking-widest mb-6">HAVE A QUESTION ?</p>
-    
-            <form class="w-full max-w-lg flex flex-col items-center">
-                <div class="flex space-x-4 w-full mb-4">
-                    <input type="text" placeholder="Your name" class="w-1/2 p-3 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-orange-300">
-                    <input type="email" placeholder="Your email" class="w-1/2 p-3 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-orange-300">
-                </div>
-                <textarea placeholder="Your question here..." class="w-full p-3 h-32 border border-gray-300 rounded-md resize-none focus:outline-none focus:ring focus:ring-orange-300 mb-6"></textarea>
-                <button type="submit" class="w-full py-3 bg-orange-500 text-white font-semibold rounded-md hover:bg-orange-600 transition">SEND</button>
-            </form>
-        </section>
-
 </body>
 </html>
