--- a/public/index.html
+++ b/public/index.html
@@ -14,32 +14,54 @@
 </head>
 
 <body class=" h-svh  ">
-    <nav class="h-[10%]">
-        <p>he</p>
-    </nav>
+    <header class="w-full pt-1 h-fit mb-9">
+        <nav class=" flex flex-row items-center justify-between px-2 py-2 pt-2 lg:px-12">
+            <img class="pl-2 w-36" src="/public/assets/images/homeslides/company logo .png" alt="COMPANY LOGO">
+            <ul class="items-center justify-between hidden gap-8 pr-20 text-lg lg:flex">
+                <li><a class="navItem" href="#">HOME</a></li>
+                <li><a class="navItem" href="#">ABOUT</a></li>
+                <li><a class="navItem" href="#">SERVICES</a></li>
+                <li><a class="navItem" href="#">FAQ</a></li>
+                <li><a class="navItem" href="#">CONTACT</a></li>
+            </ul>
+            
+            <div class="flex justify-between gap-4 ">
+                <div class="relative flex items-center cursor-pointer">
+                    <span class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all" ></span>
+                    <div class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">0</div>
+                </div>
+                <span class="icon-[iconamoon--menu-burger-horizontal] cursor-pointer text-black text-3xl lg:hidden hover:text-lBrown active:text-dBrown"></span>
+            </div>
+        </nav>
+    </header>
     <main>
-        <div class="h-[500px] w-[1380px] grid grid-cols-2 gap-7 ">
+        <div class="h-[592px] w-[1380px] grid sm:grid-cols-2 gap-10  ">
             <div>
                 <div
-                    class=" h-[90%] rounded-e-full border-dBrown border-4 shadow-md shadow-dark  flex justify-center items-center">
-                    <img src="/public/assets/images/FAQs/FAQs.jpg"
-                        class="w-full h-[100%] rounded-e-full opacity-10  relative " alt="">
+                    class=" sm:h-[90%] sm:rounded-e-full border-dBrown sm:border-4 border-y-4 sm:shadow-md sm:shadow-dark  flex sm:justify-center sm:items-center justify-center h-16">
+                    <img src="/public/assets/images/FAQs/FAQs.jpg" class="sm:block w-full h-[100%] rounded-e-full opacity-10  relative hidden  " alt="image arrier le plan">
                     <div class="flex flex-col text-center gap-3 absolute">
-                        <h1 class="text-9xl font-Mont text-lBrown font-semibold  ">FAQS</h1>
+                        <h1 class="sm:text-9xl font-Mont text-lBrown font-semibold  text-5xl ">FAQS</h1>
                         <div class="flex flex-col gap-2">
-                            <span class="font-Mont font-extrabold text-3xl text-gray">FREQUENTLY ASKED QUESTIONS.</span>
-                            <span class="font-Mont  text-3xl text-gray "> Here are some common questions about </span>
-                            <span class="font-Mont font-extrabold text-3xl text-gray">SOFALO</span>
+                            <span class="sm:block font-Mont font-extrabold text-3xl text-gray hidden">FREQUENTLY ASKED QUESTIONS.</span>
+                            <span class="sm:block font-Mont  text-3xl text-gray hidden "> Here are some common questions about </span>
+                            <span class="sm:block font-Mont font-extrabold text-3xl text-gray hidden">SOFALO</span>
                         </div>
+
                     </div>
 
                 </div>
+                <div class="pt-10 w-full sm:hidden flex flex-col block justify-center items-center">
+                <span class="sm:hidden font-Mont font-extrabold text-3xl text-gray block">FREQUENTLY ASKED QUESTIONS.</span>
+                <span class="sm:hidden font-Mont  text2xl text-gray block "> Here are some common questions about </span>
+                <span class="sm:hidden font-Mont font-extrabold text-3xl text-gray block">SOFALO</span>
             </div>
-            <div class=" flex justify-between items-center ">
-                <div class="w-[2%] h-[90%] bg-lBrown rounded-full "></div>
-                <div class="w-[90%] h-[95%]  grid grid-cols-2 gap-4 ">
+            </div>
+            <div class=" flex justify-between items-center pl-16">
+                <div class="w-[2%] h-[90%] bg-lBrown rounded-full  sm:block hidden "></div>
+                <div class="w-[90%] h-[95%]  sm:grid grid-cols-2 sm:gap-9 ">
                     <div
-                        class="flex justify-center items-center flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
+                        class="flex justify-center items-center sm:mb-0 mb-5 flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
                         <div
                             class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  ">
                             <img src="/public/assets/images/FAQs/support.png" class="w-36 h-36" alt="">
@@ -47,7 +69,7 @@
                         <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
                     </div>
                     <div
-                        class="flex justify-center items-center flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
+                        class="flex justify-center items-center flex-col gap-2 sm:mb-0 mb-5 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
                         <div
                             class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  ">
                             <img src="/public/assets/images/FAQs/return-box.png" class="w-36 h-36" alt="">
@@ -55,7 +77,7 @@
                         <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">REFUND POLICY</p>
                     </div>
                     <div
-                        class="flex justify-center items-center flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
+                        class="flex justify-center items-center flex-col gap-2 sm:mb-0 mb-5 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
                         <div
                             class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  ">
                             <img src="/public/assets/images/FAQs/trust.png" class="w-36 h-36" alt="">
@@ -63,7 +85,7 @@
                         <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">Trust</p>
                     </div>
                     <div
-                        class="flex justify-center items-center flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
+                        class="flex justify-center items-center flex-col gap-2 sm:mb-0 mb-5 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
                         <div
                             class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  ">
                             <img src="/public/assets/images/FAQs/payement.png" class="w-36 h-36" alt="">
