j ai faire le  section ou il ya les questions ms son animation dans  le commit devant je vous ajouter l animation dans cette section

--- a/public/index.html
+++ b/public/index.html
@@ -24,38 +24,47 @@
                 <li><a class="navItem" href="#">FAQ</a></li>
                 <li><a class="navItem" href="#">CONTACT</a></li>
             </ul>
-            
+
             <div class="flex justify-between gap-4 ">
                 <div class="relative flex items-center cursor-pointer">
-                    <span class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all" ></span>
-                    <div class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">0</div>
+                    <span
+                        class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
+                    <div
+                        class="absolute right-0 flex items-center justify-center w-5 h-5 rounded-full top-3 bg-lBrown font-Mont">
+                        0</div>
                 </div>
-                <span class="icon-[iconamoon--menu-burger-horizontal] cursor-pointer text-black text-3xl lg:hidden hover:text-lBrown active:text-dBrown"></span>
+                <span
+                    class="icon-[iconamoon--menu-burger-horizontal] cursor-pointer text-black text-3xl lg:hidden hover:text-lBrown active:text-dBrown"></span>
             </div>
         </nav>
     </header>
-    <main>
+    <main class="w-full">
         <div class="h-[592px] w-[1380px] grid sm:grid-cols-2 gap-10  ">
             <div>
                 <div
                     class=" sm:h-[90%] sm:rounded-e-full border-dBrown sm:border-4 border-y-4 sm:shadow-md sm:shadow-dark  flex sm:justify-center sm:items-center justify-center h-16">
-                    <img src="/public/assets/images/FAQs/FAQs.jpg" class="sm:block w-full h-[100%] rounded-e-full opacity-10  relative hidden  " alt="image arrier le plan">
+                    <img src="/public/assets/images/FAQs/FAQs.jpg"
+                        class="sm:block w-full h-[100%] rounded-e-full opacity-10  relative hidden  "
+                        alt="image arrier le plan">
                     <div class="flex flex-col text-center gap-3 absolute">
                         <h1 class="sm:text-9xl font-Mont text-lBrown font-semibold  text-5xl ">FAQS</h1>
                         <div class="flex flex-col gap-2">
-                            <span class="sm:block font-Mont font-extrabold text-3xl text-gray hidden">FREQUENTLY ASKED QUESTIONS.</span>
-                            <span class="sm:block font-Mont  text-3xl text-gray hidden "> Here are some common questions about </span>
+                            <span class="sm:block font-Mont font-extrabold text-3xl text-gray hidden">FREQUENTLY ASKED
+                                QUESTIONS.</span>
+                            <span class="sm:block font-Mont  text-3xl text-gray hidden "> Here are some common questions
+                                about </span>
                             <span class="sm:block font-Mont font-extrabold text-3xl text-gray hidden">SOFALO</span>
                         </div>
 
                     </div>
-
                 </div>
                 <div class="pt-10 w-full sm:hidden flex flex-col block justify-center items-center">
-                <span class="sm:hidden font-Mont font-extrabold text-3xl text-gray block">FREQUENTLY ASKED QUESTIONS.</span>
-                <span class="sm:hidden font-Mont  text2xl text-gray block "> Here are some common questions about </span>
-                <span class="sm:hidden font-Mont font-extrabold text-3xl text-gray block">SOFALO</span>
-            </div>
+                    <span class="sm:hidden font-Mont font-extrabold text-3xl text-gray block">FREQUENTLY ASKED
+                        QUESTIONS.</span>
+                    <span class="sm:hidden font-Mont  text2xl text-gray block "> Here are some common questions about
+                    </span>
+                    <span class="sm:hidden font-Mont font-extrabold text-3xl text-gray block">SOFALO</span>
+                </div>
             </div>
             <div class=" flex justify-between items-center pl-16">
                 <div class="w-[2%] h-[90%] bg-lBrown rounded-full  sm:block hidden "></div>
@@ -96,9 +105,86 @@
             </div>
 
         </div>
+        <div
+            class="w-[90%]  my-20 justify-self-center border-4 border-lBrown rounded-3xl shadow-md shadow-gray flex  items-center flex-col gap-6 pt-5 ">
+            <div class=" w-32 h-32 flex justify-center items-center border-lBrown border-2 rounded-full  ">
+                <img src="/public/assets/images/FAQs/support.png" class="w-24 h-24" alt="">
+            </div>
+            <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
+            <div class="w-[80%] h-[70%] grid grid-rows-6 gap-4 mb-10 ">
+                <div>
+                <div
+                    class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                    <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                    <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                        alt="ouvrir">
+                </div>
+                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                    <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+                </div>
+            </div>
+                <div>
+                <div
+                    class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                    <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                    <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                        alt="ouvrir">
+                </div>
+                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                    <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+                </div>
+            </div>
+                <div>
+                <div
+                    class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                    <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                    <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                        alt="ouvrir">
+                </div>
+                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                    <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+                </div>
+            </div>
+                <div>
+                <div
+                    class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                    <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                    <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                        alt="ouvrir">
+                </div>
+                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                    <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+                </div>
+            </div>
+                <div>
+                <div
+                    class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                    <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                    <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                        alt="ouvrir">
+                </div>
+                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                    <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+                </div>
+            </div>
+                <div>
+                <div
+                    class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                    <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                    <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                        alt="ouvrir">
+                </div>
+                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                    <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+                </div>
+            </div>
+            </div>
 
+        </div>
     </main>
+    <footer class="h-36">
 
+    </footer>
 
 </body>
 
