footer design is done and responsive

--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,7 @@
 
                 <!-- card -->
                 <div class="catCard">
-                    <span class="icon-[material-symbols-light--bed] text-[10rem]"></span>
+                    <span class="icon-[material-symbols-light--bed-outline] text-[10rem]"></span>
                     <h4 class="text-xl text-center text-gray-400">BEDS</h4>
                 </div>
 
@@ -221,9 +221,10 @@
         </section>
 
         <!-- footer -->
-        <footer class="flex flex-row justify-between px-10">
-            <!-- home -->
-             <div class="flex flex-col text-gray-400 gap-2">
+        <footer class="flex flex-col justify-between w-full border-2 border-lBrown m-auto pt-10 px-[8rem]">
+           <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12">
+             <!-- home -->
+             <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                 <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">HOME</h2>
                 <p>Assembly Guides</p>
                 <p>Furniture Packages</p>
@@ -232,18 +233,49 @@
              </div>
 
              <!-- about -->
-             <div class="flex flex-col text-gray-400 gap-2">
+             <div class="flex flex-col text-gray-400 gap-2 w-1/3">
                 <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
                     ABOUT</h2>
                 <p>Trade Program</p>
                 <p>Gift Cards</p>
                 <p>About us</p>
                 <p>Who Are We</p>
-             </div>
-
-             div class="flex flex-col">
-                <img class="w-1/2" src="assets/images/logo.png" alt="">
             </div>
+
+            <!-- socials -->
+            <div class="-order-1 lg:order-[0] flex flex-col gap-4 w-fit justify-center items-center">
+                <img class="w-2/3" src="assets/images/logo.png" alt="">
+                <div class="flex justify-center gap-6 pt-5 flex-wrap w-2/3 text-5xl">
+                    <span class="icon-[mdi--facebook]"></span>
+                    <span class="icon-[ri--instagram-fill]"></span>
+                    <span class="icon-[formkit--twitter]"></span>
+                    <span class="icon-[formkit--whatsapp]"></span>
+                </div>
+            </div>
+
+            <!-- help -->
+            <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+                <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
+                    HELP</h2>
+                <p>Contact</p>
+                <p>Orders</p>
+                <p>Shipping & Delivery</p>
+                <p>Refund</p>
+            </div>
+
+             <!-- FAQ -->
+             <div class="flex flex-col text-gray-400 gap-2 w-1/3">
+                <h2 class="text-2xl text-black border-b-2 border-black font-bold text-left">
+                    FAQ</h2>
+                <p>Most Asked Questions</p>
+                <p>How We Take Orders</p>
+                <p>Delivery Policy</p>
+                <p>Trust</p>
+            </div>
+           </div>
+
+           <!-- copyright -->
+           <h2 class="flex justify-center py-6 text-2xl text-center font-bold">© 2024 SOFALO. ALL RIGHTS RESERVED.</h2>
 
         </footer>
     </main>
