j ai change le grid dans le partie qui dit en dernier commit en flex et ajoute animation

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
                 <img src="/public/assets/images/FAQs/support.png" class="w-24 h-24" alt="">
             </div>
             <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
-            <div class="w-[80%] h-[70%] grid grid-rows-6 gap-4 mb-10 ">
+            <div class="w-[80%] h-[70%] flex flex-col  gap-4 mb-10 ">
                 <div>
                 <div
                     class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
@@ -174,7 +174,7 @@
                     <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
                         alt="ouvrir">
                 </div>
-                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden">
                     <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
                 </div>
             </div>
