finir le media querry de page de FAQs

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class=" h-svh  ">
-    <header class="w-full pt-1 h-fit mb-9">
+    <header class="pt-1 h-fit mb-9  sm:w-[1380px] w-full">
         <nav class=" flex flex-row items-center justify-between px-2 py-2 pt-2 lg:px-12">
             <img class="pl-2 w-36" src="/public/assets/images/homeslides/company logo .png" alt="COMPANY LOGO">
             <ul class="items-center justify-between hidden gap-8 pr-20 text-lg lg:flex">
@@ -38,8 +38,8 @@
             </div>
         </nav>
     </header>
-    <main class="w-full">
-        <div class="h-[592px] w-[1380px] grid sm:grid-cols-2 gap-10  ">
+    <main class="w-fit">
+        <div class="sm:h-[592px]  sm:w-[1380px] grid sm:grid-cols-2 gap-10  ">
             <div>
                 <div
                     class=" sm:h-[90%] sm:rounded-e-full border-dBrown sm:border-4 border-y-4 sm:shadow-md sm:shadow-dark  flex sm:justify-center sm:items-center justify-center h-16">
@@ -59,11 +59,11 @@
                     </div>
                 </div>
                 <div class="pt-10 w-full sm:hidden flex flex-col block justify-center items-center">
-                    <span class="sm:hidden font-Mont font-extrabold text-3xl text-gray block">FREQUENTLY ASKED
+                    <span class="sm:hidden font-Mont font-extrabold text-2xl text-gray block">FREQUENTLY ASKED
                         QUESTIONS.</span>
-                    <span class="sm:hidden font-Mont  text2xl text-gray block "> Here are some common questions about
+                    <span class="sm:hidden font-Mont  text-xl text-gray block "> Here are some common questions about
                     </span>
-                    <span class="sm:hidden font-Mont font-extrabold text-3xl text-gray block">SOFALO</span>
+                    <span class="sm:hidden font-Mont font-extrabold text-2xl text-gray block">SOFALO</span>
                 </div>
             </div>
             <div class=" flex justify-between items-center pl-16">
@@ -106,12 +106,12 @@
 
         </div>
         <div
-            class="w-[90%]  my-20 justify-self-center border-4 border-lBrown rounded-3xl shadow-md shadow-gray flex  items-center flex-col gap-6 pt-5 ">
+            class="  w-[90%] right-0 my-20 justify-self-center border-4 border-lBrown rounded-3xl shadow-md shadow-gray flex  items-center flex-col gap-6 pt-5 ">
             <div class=" w-32 h-32 flex justify-center items-center border-lBrown border-2 rounded-full  ">
                 <img src="/public/assets/images/FAQs/support.png" class="w-24 h-24" alt="">
             </div>
             <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
-            <div class="w-[80%] h-[70%] flex flex-col  gap-4 mb-10 ">
+            <div class="w-[80%] h-[70%] flex flex-col justify-between  gap-4 mb-10 ">
                 <div>
                 <div
                     class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
@@ -179,13 +179,12 @@
                 </div>
             </div>
             </div>
-
         </div>
     </main>
     <footer class="h-36">
 
     </footer>
-
+<script src="/public/assets/js/script.js"></script>
 </body>
 
 </html>
