--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -50,8 +50,16 @@
     </div>
 
     <!-- Product cards Container -->
-    <div id="card" class="container max-w-full mx-auto justify-between grid grid-cols-1 gap-20 sm:grid-cols-2 md:grid-cols-3 mt-8 px-4 md:px-0">
-    </div>
+     <div>
+         <div id="card" class="container max-w-full mx-auto justify-between grid grid-cols-1 gap-20 sm:grid-cols-2 md:grid-cols-3 mt-8 px-4 md:px-0">
+         </div>
+         <div id="card2" class="container max-w-full mx-auto justify-between grid grid-cols-1 gap-20 sm:grid-cols-2 md:grid-cols-3 mt-8 px-4 md:px-0">
+         </div>
+         <div class="pagination flex gap-2 justify-center mt-10">
+            <div id="pagination1" class=" flex w-8 h-8 bg-lBrown bg text-white text-xl justify-center items-center hover:cursor-pointer">1</div>
+            <div id="pagination2" class=" flex w-8 h-8 border border-SoftGray text-lBrown text-xl justify-center items-center hover:cursor-pointer">2</div>
+        </div>
+     </div>
     </div>
 
 
