j ai fait la fonction qui remove hidden pour afficher le liste de questions

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
                     <div
                         class="flex justify-center items-center sm:mb-0 mb-5 flex-col gap-2 transition ease-in-out delay-150 hover:translate-y-1 hover:scale-110 duration-75">
                         <div
-                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown  ">
+                            class=" w-40 h-40 flex justify-center items-center border-lBrown border-4 rounded-2xl  hover:border-dBrown" onclick="UserRights()">
                             <img src="/public/assets/images/FAQs/support.png" class="w-36 h-36" alt="">
                         </div>
                         <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
@@ -105,14 +105,14 @@
             </div>
 
         </div>
-        <div
-            class="  w-[90%] right-0 my-20 justify-self-center border-4 border-lBrown rounded-3xl shadow-md shadow-gray flex  items-center flex-col gap-6 pt-5 ">
+        <div id="UserRights"
+            class=" hidden  w-[90%] right-0 my-20 justify-self-center border-4 border-lBrown rounded-3xl shadow-md shadow-gray flex  items-center flex-col gap-6 pt-5 ">
             <div class=" w-32 h-32 flex justify-center items-center border-lBrown border-2 rounded-full  ">
                 <img src="/public/assets/images/FAQs/support.png" class="w-24 h-24" alt="">
             </div>
             <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
             <div class="w-[80%] h-[70%] flex flex-col justify-between  gap-4 mb-10 ">
-                <div>
+                <div class="list_user_rights">
                 <div
                     class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
                     <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
